--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DOMAIN_NAME = 'http://localhost:3000/'　　#ドメイン名
-USER_EMAIL = 'hiroshi.ruby@gmail.com'　　 #メールアドレス
-EMAIL_PASSWORD = 'zvddmrhwvbrgbnqc'      #パスワード
+DOMAIN_NAME = 'http://localhost:3000/'
+USER_EMAIL = 'hiroshi.ruby@gmail.com'
+EMAIL_PASSWORD = 'zvddmrhwvbrgbnqc'
